Fixed project description spacing

--- a/portfolio/src/components/assets/index.css
+++ b/portfolio/src/components/assets/index.css
@@ -292,7 +292,7 @@ footer img:hover{
   font-size: 25px;
   position: absolute;
   top: 90px;
-  left: 75px;
+  left: 35px;
 }
 
 .project-links{
